--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
             margin-right: 1em;
         }
         #next_page {
-            font-size: 1.3em;
+            font-size: 1.2em;
         }
         .topic_title {
             font-size: 1.7em;
@@ -34,7 +34,6 @@
             border-bottom: 1px solid #eee;
             margin-bottom: 1.5em;
         }
-
     </style>
 {% end %}
 
@@ -111,6 +110,6 @@
     {% end %}
     
     {% if next_page %}
-        <a id="next_page" href="/?page={{ next_page }}">More »</a>
+        <a id="next_page" href="/?page={{ next_page }}">next page »</a>
     {% end %}
 {% end %}
