--- a/templates/submit.html
+++ b/templates/submit.html
@@ -11,7 +11,7 @@
         #title { width: 550px; }
         textarea {
             height: 300px;
-            width: 650px;
+            width: 100%;
         }
         #slug {
             display: inline; 
