--- a/templates/topic.html
+++ b/templates/topic.html
@@ -26,7 +26,7 @@
 {% block style %}
     <style>
         #reply_box { display: none; }
-        #reply_box .body { width: 500px; }
+        #reply_box .body { width: 450px; }
         #reply_box textarea {
             width: 100%;
             height: 100px;
@@ -85,7 +85,7 @@
     </div>
     
     <br>
-    <h2 style="color:#555;margin-top: 1em;">Comments</h2>
+    <h2 style="margin-top: 1em;">Comments</h2>
     
     <div id="reply_box" class="comment" {% if not replies %}style="display:block;"{% end %}>
         {% if current_user %}
