--- a/templates/base.html
+++ b/templates/base.html
@@ -64,11 +64,10 @@
                 {% for t in current_site.hot_topics() %}
                     <h3><a href="/{{ t.name }}">{{ escape(t.title) }}</a></h3>
                 {% end %}
-                
+                <br>
                 <h2>Search</h2>
                 <form method="get" action="http://www.google.com/search">
-                    <input type="text" name="q" size="18" maxlength="255" value="">
-                    <input type="hidden" name="domains" value="thrutched.com">
+                    <input type="text" name="q" value="">
                     <input type="hidden" name="sitesearch" value="thrutched.com">
                     <input type="submit" value="Google Search"> 
                 </form>
