--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     <!--[if IE 6]>
         <style>
             #background { display: none; }
+            .topic img, .comment img { width: 100%; }
         </style>
     <![endif]-->
     {% block style %}{% end %}
