--- a/templates/users.html
+++ b/templates/users.html
@@ -31,7 +31,7 @@
                 <br>
                 {{ user.n_comments }} <a href="/users/{{ user.name }}/comments">comments</a>
             </div>
-            <div style="clear:both"></div>
+            <div style="clear:left"></div>
         </div>
     {% end %}
 {% end %}
