submit page tweak

--- a/templates/submit.html
+++ b/templates/submit.html
@@ -8,14 +8,14 @@
 
 {% block style %}
     <style>
-        #title { width: 550px; }
+        #title { width: 90%; }
         textarea {
             height: 300px;
-            width: 100%;
+            width: 90%;
         }
         #slug {
             display: inline; 
-            width: 300px;
+            width: 50%;
             border: none;
             background: #eee;
         }
