going to add sha1 iterations to password storage. fixed reply box textarea size

--- a/templates/topic.html
+++ b/templates/topic.html
@@ -26,7 +26,7 @@
 {% block style %}
     <style>
         #reply_box { display: none; }
-        #reply_box .body { width: 450px; }
+        #reply_box .body { width: 75%; }
         #reply_box textarea {
             width: 100%;
             height: 100px;
