--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
                 {% end %}
                 <br>
                 <br>
-                <h2>Recently</h2>
+                <h2>Favorites</h2>
                 {% for t in current_site.sidebar_topics() %}
                     <h3><a href="/{{ t.name }}">{{ escape(t.title) }}</a></h3>
                 {% end %}
