added favorites on profile page. reverted tornado.

--- a/templates/account.html
+++ b/templates/account.html
@@ -30,7 +30,7 @@
     <div id="info">
         <img src="{{ current_user.gravatar(100) }}" class="gravatar">
         <div class="body">
-            <a href="/users/{{ current_user.name }}">Profile</a>
+            <a href="/users/{{ current_user.name }}">My Profile</a>
             <br>
             {{ current_user.karma }} karma
             <br>
