--- a/static/style.css
+++ b/static/style.css
@@ -2,12 +2,21 @@
 html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0;}table{border-collapse:collapse;border-spacing:0;}fieldset,img{border:0;}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal;}li{list-style:none;}caption,th{text-align:left;}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}q:before,q:after{content:'';}abbr,acronym{border:0;font-variant:normal;}sup{vertical-align:text-top;}sub{vertical-align:text-bottom;}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;}input,textarea,select{*font-size:100%;}legend{color:#000;}
 
 
+html {
+    background: #1B1C1F;
+}
+
 body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-weight: 200;
     font-size: 16px;
-    color: #444;
     line-height: 1.5em;
+    color: black;
+    background: white;
+    border: 10px solid black;
+    margin: 20px auto;
+    padding: 20px 50px;
+    width: 800px;
+    padding-bottom: 4em;
 }
 
 a { color: #41a3c2; }
@@ -18,15 +27,15 @@ em { font-style: italic; }
 p, blockquote { margin-bottom: 1.4em; }
 
 h1, h2, h3, h4, h5 {
+    font-family: Calibri, Helvetica, Arial;
     line-height: 1.4em;
     margin: 1em 0 0.5em;
 }
 h1 a, h2 a, h3 a, h4 a, h5 a {
-    color: inherit;
     text-decoration: none;
 }
 
-h1 { font-size: 1.8em; }
+h1 { font-size: 1.6em; }
 h2 { font-size: 1.3em; }
 h3 { font-size: 1.1em; font-weight: bold; }
 
@@ -59,24 +68,14 @@ textarea {
 }
 
 
-#background {
-    width: 100%; 
-    height: 100%; 
-    position: absolute; 
-    left: 0px; 
-    top: 0px; 
-    z-index: -1;
-}
-#body {
-    padding-bottom: 4em;
-}
-
 #header {
-    width: 870px;
-    margin: 2em auto 0;
+    margin: 2em 0;
 }
 #header #logo {
     float: left;
+}
+#header #logo img {
+    height: 70px;
 }
 
 #header_about {
@@ -84,17 +83,21 @@ textarea {
     width: 600px;
     float: right;
     text-align: right;
-    font-size: 1.1em;
-    margin-top: 3.1em;
+    margin-top: 1.2em;
+    font-size: 1em;
+    display: none;
+}
+
+#header_about p {
+    margin: 0;
 }
 
 #main {
     margin: 2.5em auto;
-    width: 800px;
 }
 #content {
     float: left;
-    width: 600px;
+    width: 800px;
 }
 #sidebar {
     float: right;
@@ -137,6 +140,23 @@ textarea {
 #message.success { background-color: #c6eac5; border: 1px solid #a5c4a4;}
 #message.error { background-color: #F8ECEF; border: 1px solid #e0bac7;}
 
+.topic .title {
+    margin-left: 130px;
+    font-size: 1.8em;
+}
+.topic .info {
+    float: left;
+    width: 100px;
+    font-weight: 200;
+}
+.topic .body {
+    margin-left: 130px;
+    font-family: Georgia;
+}
+.topic .video {
+    width: 80%;
+}
+#sidebar { display: none;}
 
 .topic_listing { width: 90%; }
 .topic_listing td {
@@ -184,10 +204,6 @@ textarea {
     margin-left: 40px;
 }
 
-
-.topic h1, .comment h1 { font-size: 1.5em; }
-.topic h2, .comment h2 { font-size: 1.3em; }
-.topic h3, .comment h3 { font-size: 1.1em; }
 
 .topic img, .comment img { max-width: 100%; }
 
