--- a/templates/topic.html
+++ b/templates/topic.html
@@ -43,12 +43,11 @@
         <div id="message" class="success">Comment deleted</div>
     {% end %}
     
-    <h1>
-        <a href="/{{ topic.name }}">{{ escape(topic.title) }}</a>
-    </h1>
-    
-    <div class="topic" style="border:none;">
-        <p class="comment_info">
+    <div class="topic">
+        <h1 class="title">
+            <a href="/{{ topic.name }}">{{ escape(topic.title) }}</a>
+        </h1>
+        <div class="info">
             {% if not current_user %}
                 <a class="vote_up sign_in" href="/sign_in?message=vote">+</a>
             {% elif topic.can_vote_up(current_user) %}
@@ -57,16 +56,20 @@
             {% if topic.can_vote_down(current_user) %}
                 / <a class="vote_down" href="/vote?way=down&amp;topic_id={{ topic.name }}">-</a>
             {% end %}
+            <br>
             <span class="points">
                 {{ topic.points }} {{ 'point' if topic.points in (1, -1) else 'points' }}
             </span>
+            <br>
+            <img src="{{ topic.author.gravatar(60) }}" class="gravatar">
             
+            <br>
             {% if topic.author %}
                 by <a href="/users/{{ topic.author.name }}">{{ topic.author.name }}</a>{% for editor in topic.editors %}, <a href="/users/{{ editor }}">{{ editor }}</a>{% end %}
             {% else %}
                 by anonymous
             {% end %}
-            
+            <br>
             {{ relative_date(topic.created) }}
             
             {% if topic.version > 1 %}
@@ -75,15 +78,17 @@
                 | version 1
             {% end %}
             | <a href="/{{ topic.name }}/edit">edit</a>
-        </p>
-        <div class="body">
+        </div>
+        
+        <div class="body" style="border:none;">
             {{ markdown(topic.text, video_embed=True) }}
             {% if replies %}
                 <a class="reply">reply</a>
             {% end %}
         </div>
+        <div style="clear:both"></div>
     </div>
-    
+
     <br>
     <h2 style="margin-top: 1em;">Comments</h2>
     
